--- a/data/mechs_data.cfg
+++ b/data/mechs_data.cfg
@@ -8,11 +8,10 @@ MECH_0_COST=10000
 MECH_0_BASE_HEALTH=4
 MECH_0_CURRENT_HEALTH=4
 MECH_0_MISSION=1
+MECH_0_THEME=1
 MECH_0_STATUS=1 #0=for sale,1=in garage, 2=on_mission, 3=destroyed
-MECH_0_FLAVOR="Great for special ops."
+MECH_0_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_0_TYPE=1 #0=defensive,1=special ops,2=aerial
 MECH_0_COMPATIBLE_ENVIRONMENTS=[0,1,2] #Array[ENVIRONMENT_TYPES]  0=swamp,1=underwater, 2=space, ...
-MECH_0_ADDITIONAL_ODDS_OF_SUCCESS=1
-MECH_0_ADDITIONAL_ODDS_OF_FAILURE=1
-MECH_0_ODDS_OF_SUCCESS_REQUIREMENT=2
-MECH_0_ODDS_OF_FAILURE_REQUIREMENT=1
+MECH_0_WORSE_ODDS=1
+MECH_0_BETTER_ODDS=2
