--- a/data/pilots_data.cfg
+++ b/data/pilots_data.cfg
@@ -6,9 +6,10 @@ PILOT_0_ID=0
 PILOT_0_NAME="Jack"
 PILOT_0_COST=1000
 PILOT_0_MISSION=1
+PILOT_0_THEME=1 # enum for different texture variations. (Each theme would be a different material)
 PILOT_0_STATUS=1 #0=for hire,1=hired, 2=on_mission, 3=dead
 PILOT_0_FLAVOR="Loves Jill and exploring space. Is afraid of deep water."
-PILOT_0_ADDITIONAL_ODDS_OF_SUCCESS=1
-PILOT_0_ADDITIONAL_ODDS_OF_FAILURE=1
-PILOT_0_ODDS_OF_SUCCESS_REQUIREMENT=2
-PILOT_0_ODDS_OF_FAILURE_REQUIREMENT=1
+PILOT_0_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_0_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_0_BETTER_ODDS=1 #+1 odds
+PILOT_0_WORSE_ODDS=1 #-1 odds
