--- a/data/parts_data.cfg
+++ b/data/parts_data.cfg
@@ -31,7 +31,21 @@ PART_1_ATTACHED_TO_MECH_ID=0
 PART_1_STATUS=0
 
 PART_2_ID=2
-PART_2_NAME="Bolts"
+PART_2_NAME="Red Nut"
+PART_2_THEME=1
+PART_2_FLAVOR="A random assortment."
+PART_2_RECYCLE_POWER = 10
+PART_2_SELLING_PRICE = 0
+PART_2_BETTER_ODDS = 0
+PART_2_WORSE_ODDS = 0
+PART_2_CRITERIA_FOR_BETTER_ODDS = 0
+PART_2_CRITERIA_FOR_WORSE_ODDS = 0
+PART_2_EQUIPABILITY = 0
+PART_2_ATTACHED_TO_MECH_ID=0
+PART_2_STATUS=0
+
+PART_2_ID=2
+PART_2_NAME="Blue Nut"
 PART_2_THEME=1
 PART_2_FLAVOR="A random assortment."
 PART_2_RECYCLE_POWER = 10
