--- a/data/mission_data.cfg
+++ b/data/mission_data.cfg
@@ -1,21 +1,210 @@
-[MISSION_1]
+[DEFAULT]
 
-mission_ID=1
-mission_TITLE="M-001"
-mission_FLAVOR_TEXT="this is a crazy murder mission"
-mission_ODDS_SUCCESS=0.75
-mission_ENVIRONMENT=0
-mission_OK_MECHS=Array[int]([0, 1])
-mission_LOCATION=1
-mission_RESULT=0
+NUMBER_OF_MISSIONS=10
 
-[MISSION_2]
+MISSION_0_ID=0
+MISSION_0_NAME="MISSION-000"
+MISSION_0_FLAVOR="Help Jack find Jill"
+MISSION_0_FLAVOR_ICON=0
+MISSION_0_ONE_OVER_ODDS_OF_SUCCESS=1
+MISSION_0_ENVIRONMENT=0
+MISSION_0_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_0_LOCATION_ID=1
+MISSION_0_MECH_ID=0
+MISSION_0_PILOT_ID=0
+MISSION_0_STATUS=0
+MISSION_0_TIME_STARTED=""
+MISSION_0_REWARD_TYPE_1=0
+MISSION_0_REWARD_TYPE_2=0
+MISSION_0_REWARD_VALUE_1=1
+MISSION_0_REWARD_VALUE_2=1
+MISSION_0_START_SCRIPT="SAY[Help me find Jill!]Jack"
+MISSION_0_SUCCESS_SCRIPT="
+SAY[Thanks!]Jack
+SAY[Yeah, thanks!]Jill
+DO[FINISHED_MISSION_0]"
+MISSION_0_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
-mission_ID=2
-mission_TITLE="M-002"
-mission_FLAVOR_TEXT="this is a rescue mission"
-mission_ODDS_SUCCESS=0.5
-mission_ENVIRONMENT=0
-mission_OK_MECHS=Array[int]([0, 1])
-mission_LOCATION=2
-mission_RESULT=0
+
+MISSION_1_ID=1
+MISSION_1_NAME="MISSION-001"
+MISSION_1_FLAVOR="Destroy two targets at location."
+MISSION_1_FLAVOR_ICON=1
+MISSION_1_ONE_OVER_ODDS_OF_SUCCESS=1
+MISSION_1_ENVIRONMENT=1
+MISSION_1_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_1_LOCATION_ID=2
+MISSION_1_MECH_ID=0
+MISSION_1_PILOT_ID=0
+MISSION_1_STATUS=0
+MISSION_1_TIME_STARTED=""
+MISSION_1_REWARD_TYPE_1=0
+MISSION_1_REWARD_TYPE_2=0
+MISSION_1_REWARD_VALUE_1=1
+MISSION_1_REWARD_VALUE_2=1
+MISSION_1_START_SCRIPT=""
+MISSION_1_SUCCESS_SCRIPT=""
+MISSION_1_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_2_ID=2
+MISSION_2_NAME="MISSION-002"
+MISSION_2_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_2_FLAVOR_ICON=2
+MISSION_2_ONE_OVER_ODDS_OF_SUCCESS=5
+MISSION_2_ENVIRONMENT=2
+MISSION_2_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_2_LOCATION_ID=2
+MISSION_2_MECH_ID=0
+MISSION_2_PILOT_ID=0
+MISSION_2_STATUS=0
+MISSION_2_TIME_STARTED=""
+MISSION_2_REWARD_TYPE_1=0
+MISSION_2_REWARD_TYPE_2=0
+MISSION_2_REWARD_VALUE_1=1
+MISSION_2_REWARD_VALUE_2=1
+MISSION_2_START_SCRIPT=""
+MISSION_2_SUCCESS_SCRIPT=""
+MISSION_2_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_3_ID=3
+MISSION_3_NAME="MISSION-003"
+MISSION_3_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_3_FLAVOR_ICON=2
+MISSION_3_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_3_ENVIRONMENT=3
+MISSION_3_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_3_LOCATION_ID=3
+MISSION_3_MECH_ID=0
+MISSION_3_PILOT_ID=0
+MISSION_3_STATUS=0
+MISSION_3_TIME_STARTED=""
+MISSION_3_REWARD_TYPE_1=0
+MISSION_3_REWARD_TYPE_2=0
+MISSION_3_REWARD_VALUE_1=1
+MISSION_3_REWARD_VALUE_2=1
+MISSION_3_START_SCRIPT=""
+MISSION_3_SUCCESS_SCRIPT=""
+MISSION_3_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_4_ID=4
+MISSION_4_NAME="MISSION-004"
+MISSION_4_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_4_FLAVOR_ICON=0
+MISSION_4_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_4_ENVIRONMENT=3
+MISSION_4_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_4_LOCATION_ID=4
+MISSION_4_MECH_ID=0
+MISSION_4_PILOT_ID=0
+MISSION_4_STATUS=0
+MISSION_4_PILOT_ID=0
+MISSION_4_STATUS=0
+MISSION_4_TIME_STARTED=""
+MISSION_4_REWARD_TYPE_1=0
+MISSION_4_REWARD_TYPE_2=0
+MISSION_4_REWARD_VALUE_1=1
+MISSION_4_REWARD_VALUE_2=1
+MISSION_4_START_SCRIPT=""
+MISSION_4_SUCCESS_SCRIPT=""
+MISSION_4_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_5_ID=5
+MISSION_5_NAME="MISSION-005"
+MISSION_5_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_5_FLAVOR_ICON=0
+MISSION_5_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_5_ENVIRONMENT=3
+MISSION_5_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_5_LOCATION_ID=4
+MISSION_5_MECH_ID=0
+MISSION_5_PILOT_ID=0
+MISSION_5_STATUS=0
+MISSION_5_TIME_STARTED=""
+MISSION_5_REWARD_TYPE_1=0
+MISSION_5_REWARD_TYPE_2=0
+MISSION_5_REWARD_VALUE_1=1
+MISSION_5_REWARD_VALUE_2=1
+MISSION_5_START_SCRIPT=""
+MISSION_5_SUCCESS_SCRIPT=""
+MISSION_5_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_6_ID=7
+MISSION_6_NAME="MISSION-007"
+MISSION_6_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_6_FLAVOR_ICON=0
+MISSION_6_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_6_ENVIRONMENT=3
+MISSION_6_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_6_LOCATION_ID=4
+MISSION_6_MECH_ID=0
+MISSION_6_PILOT_ID=0
+MISSION_6_STATUS=0
+MISSION_6_TIME_STARTED=""
+MISSION_6_REWARD_TYPE_1=0
+MISSION_6_REWARD_TYPE_2=0
+MISSION_6_REWARD_VALUE_1=1
+MISSION_6_REWARD_VALUE_2=1
+MISSION_6_START_SCRIPT=""
+MISSION_6_SUCCESS_SCRIPT=""
+MISSION_6_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_7_ID=7
+MISSION_7_NAME="MISSION-007"
+MISSION_7_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_7_FLAVOR_ICON=0
+MISSION_7_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_7_ENVIRONMENT=3
+MISSION_7_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_7_LOCATION_ID=4
+MISSION_7_MECH_ID=0
+MISSION_7_PILOT_ID=0
+MISSION_7_STATUS=0
+MISSION_7_TIME_STARTED=""
+MISSION_7_REWARD_TYPE_1=0
+MISSION_7_REWARD_TYPE_2=0
+MISSION_7_REWARD_VALUE_1=1
+MISSION_7_REWARD_VALUE_2=1
+MISSION_7_START_SCRIPT=""
+MISSION_7_SUCCESS_SCRIPT=""
+MISSION_7_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_8_ID=8
+MISSION_8_NAME="MISSION-008"
+MISSION_8_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_8_FLAVOR_ICON=0
+MISSION_8_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_8_ENVIRONMENT=3
+MISSION_8_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_8_LOCATION_ID=4
+MISSION_8_MECH_ID=0
+MISSION_8_PILOT_ID=0
+MISSION_8_STATUS=0
+MISSION_8_TIME_STARTED=""
+MISSION_8_REWARD_TYPE_1=0
+MISSION_8_REWARD_TYPE_2=0
+MISSION_8_REWARD_VALUE_1=1
+MISSION_8_REWARD_VALUE_2=1
+MISSION_8_START_SCRIPT=""
+MISSION_8_SUCCESS_SCRIPT=""
+MISSION_8_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+
+MISSION_9_ID=9
+MISSION_9_NAME="MISSION-009"
+MISSION_9_FLAVOR="MISSION FLAVOR TEXT"
+MISSION_9_FLAVOR_ICON=0
+MISSION_9_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_9_ENVIRONMENT=3
+MISSION_9_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
+MISSION_9_LOCATION_ID=4
+MISSION_9_MECH_ID=0
+MISSION_9_PILOT_ID=0
+MISSION_9_STATUS=0
+
+MISSION_9_TIME_STARTED=""
+MISSION_9_REWARD_TYPE_1=0
+MISSION_9_REWARD_TYPE_2=0
+MISSION_9_REWARD_VALUE_1=1
+MISSION_9_REWARD_VALUE_2=1
+MISSION_9_START_SCRIPT=""
+MISSION_9_SUCCESS_SCRIPT=""
+MISSION_9_FAIL_SCRIPT="SAY[What a disaster!]Jack"
