--- a/data/pilots_data.cfg
+++ b/data/pilots_data.cfg
@@ -6,10 +6,118 @@ PILOT_0_ID=0
 PILOT_0_NAME="Jack"
 PILOT_0_COST=1000
 PILOT_0_MISSION=1
-PILOT_0_THEME=1 # enum for different texture variations. (Each theme would be a different material)
-PILOT_0_STATUS=1 #0=for hire,1=hired, 2=on_mission, 3=dead
+PILOT_0_THEME=1
+PILOT_0_STATUS=1
 PILOT_0_FLAVOR="Loves Jill and exploring space. Is afraid of deep water."
 PILOT_0_CRITERIA_FOR_BETTER_ODDS=1
 PILOT_0_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_0_BETTER_ODDS=1 #+1 odds
-PILOT_0_WORSE_ODDS=1 #-1 odds
+PILOT_0_BETTER_ODDS=1
+PILOT_0_WORSE_ODDS=1
+
+PILOT_1_ID=1
+PILOT_1_NAME="Jill"
+PILOT_1_COST=1000
+PILOT_1_MISSION=0
+PILOT_1_THEME=1
+PILOT_1_STATUS=0
+PILOT_1_FLAVOR="Loves Jack and getting lost."
+PILOT_1_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_1_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_1_BETTER_ODDS=1
+PILOT_1_WORSE_ODDS=1
+
+PILOT_2_ID=2
+PILOT_2_NAME="Jan"
+PILOT_2_COST=1000
+PILOT_2_MISSION=0
+PILOT_2_THEME=1
+PILOT_2_STATUS=0
+PILOT_2_FLAVOR="FLAVOR TEXT =D."
+PILOT_2_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_2_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_2_BETTER_ODDS=1
+PILOT_2_WORSE_ODDS=1
+
+PILOT_3_ID=3
+PILOT_3_NAME="Jason"
+PILOT_3_COST=1000
+PILOT_3_MISSION=0
+PILOT_3_THEME=1
+PILOT_3_STATUS=0
+PILOT_3_FLAVOR="FLAVOR TEXT =D."
+PILOT_3_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_3_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_3_BETTER_ODDS=1
+PILOT_3_WORSE_ODDS=1
+
+PILOT_4_ID=4
+PILOT_4_NAME="Jacob"
+PILOT_4_COST=1000
+PILOT_4_MISSION=0
+PILOT_4_THEME=1
+PILOT_4_STATUS=0
+PILOT_4_FLAVOR="FLAVOR TEXT =D."
+PILOT_4_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_4_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_4_BETTER_ODDS=1
+PILOT_4_WORSE_ODDS=1
+
+PILOT_5_ID=5
+PILOT_5_NAME="Jason"
+PILOT_5_COST=1000
+PILOT_5_MISSION=0
+PILOT_5_THEME=1
+PILOT_5_STATUS=0
+PILOT_5_FLAVOR="FLAVOR TEXT =D."
+PILOT_5_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_5_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_5_BETTER_ODDS=1
+PILOT_5_WORSE_ODDS=1
+
+PILOT_6_ID=6
+PILOT_6_NAME="Jason"
+PILOT_6_COST=1000
+PILOT_6_MISSION=0
+PILOT_6_THEME=1
+PILOT_6_STATUS=0
+PILOT_6_FLAVOR="FLAVOR TEXT =D."
+PILOT_6_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_6_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_6_BETTER_ODDS=1
+PILOT_6_WORSE_ODDS=1
+
+PILOT_7_ID=7
+PILOT_7_NAME="Jason"
+PILOT_7_COST=1000
+PILOT_7_MISSION=0
+PILOT_7_THEME=1
+PILOT_7_STATUS=0
+PILOT_7_FLAVOR="FLAVOR TEXT =D."
+PILOT_7_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_7_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_7_BETTER_ODDS=1
+PILOT_7_WORSE_ODDS=1
+
+PILOT_8_ID=8
+PILOT_8_NAME="Jason"
+PILOT_8_COST=1000
+PILOT_8_MISSION=0
+PILOT_8_THEME=1
+PILOT_8_STATUS=0
+PILOT_8_FLAVOR="FLAVOR TEXT =D."
+PILOT_8_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_8_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_8_BETTER_ODDS=1
+PILOT_8_WORSE_ODDS=1
+
+PILOT_9_ID=9
+PILOT_9_NAME="Jason"
+PILOT_9_COST=1000
+PILOT_9_MISSION=0
+PILOT_9_THEME=1
+PILOT_9_STATUS=0
+PILOT_9_FLAVOR="FLAVOR TEXT =D."
+PILOT_9_CRITERIA_FOR_BETTER_ODDS=1
+PILOT_9_CRITERIA_FOR_WORSE_ODDS=2
+PILOT_9_BETTER_ODDS=1
+PILOT_9_WORSE_ODDS=1
