--- a/data/data_pilots.cfg
+++ b/data/data_pilots.cfg
@@ -1,11 +1,11 @@
-[DEFAULTS]
+[DEFAULT]
 
 NUMBER_OF_PILOTS=10
 
 PILOT_0_ID=0
 PILOT_0_NAME="Jack"
 PILOT_0_COST=1000
-PILOT_0_MISSION=1
+PILOT_0_MISSION_ID=1
 PILOT_0_THEME=1
 PILOT_0_STATUS=1
 PILOT_0_FLAVOR="Loves Jill and exploring space. Is afraid of deep water."
@@ -17,7 +17,7 @@ PILOT_0_WORSE_ODDS=1
 PILOT_1_ID=1
 PILOT_1_NAME="Jill"
 PILOT_1_COST=1000
-PILOT_1_MISSION=0
+PILOT_1_MISSION_ID=0
 PILOT_1_THEME=1
 PILOT_1_STATUS=0
 PILOT_1_FLAVOR="Loves Jack and getting lost."
@@ -29,7 +29,7 @@ PILOT_1_WORSE_ODDS=1
 PILOT_2_ID=2
 PILOT_2_NAME="Jan"
 PILOT_2_COST=1000
-PILOT_2_MISSION=0
+PILOT_2_MISSION_ID=0
 PILOT_2_THEME=1
 PILOT_2_STATUS=0
 PILOT_2_FLAVOR="FLAVOR TEXT =D."
@@ -41,7 +41,7 @@ PILOT_2_WORSE_ODDS=1
 PILOT_3_ID=3
 PILOT_3_NAME="Jason"
 PILOT_3_COST=1000
-PILOT_3_MISSION=0
+PILOT_3_MISSION_ID=0
 PILOT_3_THEME=1
 PILOT_3_STATUS=0
 PILOT_3_FLAVOR="FLAVOR TEXT =D."
@@ -53,7 +53,7 @@ PILOT_3_WORSE_ODDS=1
 PILOT_4_ID=4
 PILOT_4_NAME="Jacob"
 PILOT_4_COST=1000
-PILOT_4_MISSION=0
+PILOT_4_MISSION_ID=0
 PILOT_4_THEME=1
 PILOT_4_STATUS=0
 PILOT_4_FLAVOR="FLAVOR TEXT =D."
@@ -65,7 +65,7 @@ PILOT_4_WORSE_ODDS=1
 PILOT_5_ID=5
 PILOT_5_NAME="Jason"
 PILOT_5_COST=1000
-PILOT_5_MISSION=0
+PILOT_5_MISSION_ID=0
 PILOT_5_THEME=1
 PILOT_5_STATUS=0
 PILOT_5_FLAVOR="FLAVOR TEXT =D."
@@ -77,7 +77,7 @@ PILOT_5_WORSE_ODDS=1
 PILOT_6_ID=6
 PILOT_6_NAME="Jason"
 PILOT_6_COST=1000
-PILOT_6_MISSION=0
+PILOT_6_MISSION_ID=0
 PILOT_6_THEME=1
 PILOT_6_STATUS=0
 PILOT_6_FLAVOR="FLAVOR TEXT =D."
@@ -89,7 +89,7 @@ PILOT_6_WORSE_ODDS=1
 PILOT_7_ID=7
 PILOT_7_NAME="Jason"
 PILOT_7_COST=1000
-PILOT_7_MISSION=0
+PILOT_7_MISSION_ID=0
 PILOT_7_THEME=1
 PILOT_7_STATUS=0
 PILOT_7_FLAVOR="FLAVOR TEXT =D."
@@ -101,7 +101,7 @@ PILOT_7_WORSE_ODDS=1
 PILOT_8_ID=8
 PILOT_8_NAME="Jason"
 PILOT_8_COST=1000
-PILOT_8_MISSION=0
+PILOT_8_MISSION_ID=0
 PILOT_8_THEME=1
 PILOT_8_STATUS=0
 PILOT_8_FLAVOR="FLAVOR TEXT =D."
@@ -113,7 +113,7 @@ PILOT_8_WORSE_ODDS=1
 PILOT_9_ID=9
 PILOT_9_NAME="Jason"
 PILOT_9_COST=1000
-PILOT_9_MISSION=0
+PILOT_9_MISSION_ID=0
 PILOT_9_THEME=1
 PILOT_9_STATUS=0
 PILOT_9_FLAVOR="FLAVOR TEXT =D."
