--- a/data/data_parts.cfg
+++ b/data/data_parts.cfg
@@ -1,4 +1,4 @@
-[DEFAULTS]
+[DEFAULT]
 
 NUMBER_OF_PARTS=10
 
@@ -6,139 +6,149 @@ PART_0_ID=0
 PART_0_NAME="Heat Blade"
 PART_0_FLAVOR="Sharp."
 PART_0_THEME=0
-PART_0_RECYCLE_POWER = 1
+PART_0_RECYCLE_POINTS = 1
 PART_0_SELLING_PRICE = 10
 PART_0_BETTER_ODDS = 2
 PART_0_WORSE_ODDS = 1
 PART_0_CRITERIA_FOR_WORSE_ODDS = 1
 PART_0_CRITERIA_FOR_BETTER_ODDS = 1
-PART_0_EQUIPABILITY = 1
+PART_0_TYPE = 1
 PART_0_ATTACHED_TO_MECH_ID=0
 PART_0_STATUS=0
+PART_0_COST=1000
 
 PART_1_ID=1
 PART_1_NAME="Ice Blade"
 PART_1_FLAVOR="Sharp."
 PART_1_THEME=1
-PART_1_RECYCLE_POWER = 1
+PART_1_RECYCLE_POINTS = 1
 PART_1_SELLING_PRICE = 10
 PART_1_BETTER_ODDS = 2
 PART_1_WORSE_ODDS = 1
 PART_1_CRITERIA_FOR_WORSE_ODDS = 1
 PART_1_CRITERIA_FOR_BETTER_ODDS = 1
-PART_1_EQUIPABILITY = 1
+PART_1_TYPE = 1
 PART_1_ATTACHED_TO_MECH_ID=0
 PART_1_STATUS=0
+PART_1_COST=1000
 
 PART_2_ID=2
 PART_2_NAME="Red Nut"
 PART_2_THEME=1
 PART_2_FLAVOR="A random assortment."
-PART_2_RECYCLE_POWER = 10
+PART_2_RECYCLE_POINTS = 10
 PART_2_SELLING_PRICE = 0
 PART_2_BETTER_ODDS = 0
 PART_2_WORSE_ODDS = 0
 PART_2_CRITERIA_FOR_BETTER_ODDS = 0
 PART_2_CRITERIA_FOR_WORSE_ODDS = 0
-PART_2_EQUIPABILITY = 0
+PART_2_TYPE = 0
 PART_2_ATTACHED_TO_MECH_ID=0
 PART_2_STATUS=0
+PART_2_COST=1000
 
 PART_3_ID=3
 PART_3_NAME="Blue Nut"
 PART_3_THEME=1
 PART_3_FLAVOR="A random assortment."
-PART_3_RECYCLE_POWER = 10
+PART_3_RECYCLE_POINTS = 10
 PART_3_SELLING_PRICE = 0
 PART_3_BETTER_ODDS = 0
 PART_3_WORSE_ODDS = 0
 PART_3_CRITERIA_FOR_BETTER_ODDS = 0
 PART_3_CRITERIA_FOR_WORSE_ODDS = 0
-PART_3_EQUIPABILITY = 0
+PART_3_TYPE = 0
 PART_3_ATTACHED_TO_MECH_ID=0
 PART_3_STATUS=0
+PART_3_COST=1000
 
 PART_4_ID=4
 PART_4_NAME="Blue Nut"
 PART_4_THEME=1
 PART_4_FLAVOR="A random assortment."
-PART_4_RECYCLE_POWER = 10
+PART_4_RECYCLE_POINTS = 10
 PART_4_SELLING_PRICE = 0
 PART_4_BETTER_ODDS = 0
 PART_4_WORSE_ODDS = 0
 PART_4_CRITERIA_FOR_BETTER_ODDS = 0
 PART_4_CRITERIA_FOR_WORSE_ODDS = 0
-PART_4_EQUIPABILITY = 0
+PART_4_TYPE = 0
 PART_4_ATTACHED_TO_MECH_ID=0
 PART_4_STATUS=0
+PART_4_COST=1000
 
 PART_5_ID=5
 PART_5_NAME="Blue Nut"
 PART_5_THEME=1
 PART_5_FLAVOR="A random assortment."
-PART_5_RECYCLE_POWER = 10
+PART_5_RECYCLE_POINTS = 10
 PART_5_SELLING_PRICE = 0
 PART_5_BETTER_ODDS = 0
 PART_5_WORSE_ODDS = 0
 PART_5_CRITERIA_FOR_BETTER_ODDS = 0
 PART_5_CRITERIA_FOR_WORSE_ODDS = 0
-PART_5_EQUIPABILITY = 0
+PART_5_TYPE = 0
 PART_5_ATTACHED_TO_MECH_ID=0
 PART_5_STATUS=0
+PART_5_COST=1000
 
 PART_6_ID=6
 PART_6_NAME="Blue Nut"
 PART_6_THEME=1
 PART_6_FLAVOR="A random assortment."
-PART_6_RECYCLE_POWER = 10
+PART_6_RECYCLE_POINTS = 10
 PART_6_SELLING_PRICE = 0
 PART_6_BETTER_ODDS = 0
 PART_6_WORSE_ODDS = 0
 PART_6_CRITERIA_FOR_BETTER_ODDS = 0
 PART_6_CRITERIA_FOR_WORSE_ODDS = 0
-PART_6_EQUIPABILITY = 0
+PART_6_TYPE = 0
 PART_6_ATTACHED_TO_MECH_ID=0
 PART_6_STATUS=0
+PART_6_COST=1000
 
 PART_7_ID=7
 PART_7_NAME="Blue Nut"
 PART_7_THEME=1
 PART_7_FLAVOR="A random assortment."
-PART_7_RECYCLE_POWER = 10
+PART_7_RECYCLE_POINTS = 10
 PART_7_SELLING_PRICE = 0
 PART_7_BETTER_ODDS = 0
 PART_7_WORSE_ODDS = 0
 PART_7_CRITERIA_FOR_BETTER_ODDS = 0
 PART_7_CRITERIA_FOR_WORSE_ODDS = 0
-PART_7_EQUIPABILITY = 0
+PART_7_TYPE = 0
 PART_7_ATTACHED_TO_MECH_ID=0
 PART_7_STATUS=0
+PART_7_COST=1000
 
 PART_8_ID=8
 PART_8_NAME="Blue Nut"
 PART_8_THEME=1
 PART_8_FLAVOR="A random assortment."
-PART_8_RECYCLE_POWER = 10
+PART_8_RECYCLE_POINTS = 10
 PART_8_SELLING_PRICE = 0
 PART_8_BETTER_ODDS = 0
 PART_8_WORSE_ODDS = 0
 PART_8_CRITERIA_FOR_BETTER_ODDS = 0
 PART_8_CRITERIA_FOR_WORSE_ODDS = 0
-PART_8_EQUIPABILITY = 0
+PART_8_TYPE = 0
 PART_8_ATTACHED_TO_MECH_ID=0
 PART_8_STATUS=0
+PART_8_COST=1000
 
 
 PART_9_ID=9
 PART_9_NAME="Blue Nut"
 PART_9_THEME=1
 PART_9_FLAVOR="A random assortment."
-PART_9_RECYCLE_POWER = 10
+PART_9_RECYCLE_POINTS = 10
 PART_9_SELLING_PRICE = 0
 PART_9_BETTER_ODDS = 0
 PART_9_WORSE_ODDS = 0
 PART_9_CRITERIA_FOR_BETTER_ODDS = 0
 PART_9_CRITERIA_FOR_WORSE_ODDS = 0
-PART_9_EQUIPABILITY = 0
+PART_9_TYPE = 0
 PART_9_ATTACHED_TO_MECH_ID=0
 PART_9_STATUS=0
+PART_9_COST=1000
