more work on parts

--- a/data/data_mechs.cfg
+++ b/data/data_mechs.cfg
@@ -12,7 +12,7 @@ MECH_0_THEME=1
 MECH_0_STATUS=1
 MECH_0_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_0_TYPE=1
-MECH_0_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_0_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_0_SELLING_PRICE=5000
 
 MECH_1_ID=0
@@ -25,7 +25,7 @@ MECH_1_THEME=1
 MECH_1_STATUS=1
 MECH_1_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_1_TYPE=1
-MECH_1_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_1_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_1_SELLING_PRICE=5000
 
 MECH_2_ID=0
@@ -38,7 +38,7 @@ MECH_2_THEME=1
 MECH_2_STATUS=1
 MECH_2_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_2_TYPE=1
-MECH_2_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_2_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_2_SELLING_PRICE=5000
 
 MECH_3_ID=0
@@ -51,7 +51,7 @@ MECH_3_THEME=1
 MECH_3_STATUS=1
 MECH_3_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_3_TYPE=1
-MECH_3_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_3_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_3_SELLING_PRICE=5000
 
 MECH_4_ID=0
@@ -64,7 +64,7 @@ MECH_4_THEME=1
 MECH_4_STATUS=1
 MECH_4_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_4_TYPE=1
-MECH_4_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_4_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_4_SELLING_PRICE=5000
 
 MECH_5_ID=0
@@ -77,7 +77,7 @@ MECH_5_THEME=1
 MECH_5_STATUS=1
 MECH_5_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_5_TYPE=1
-MECH_5_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_5_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_5_SELLING_PRICE=5000
 
 MECH_6_ID=0
@@ -90,7 +90,7 @@ MECH_6_THEME=1
 MECH_6_STATUS=1
 MECH_6_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_6_TYPE=1
-MECH_6_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_6_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_6_SELLING_PRICE=5000
 
 MECH_7_ID=0
@@ -103,7 +103,7 @@ MECH_7_THEME=1
 MECH_7_STATUS=1
 MECH_7_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_7_TYPE=1
-MECH_7_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_7_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_7_SELLING_PRICE=5000
 
 MECH_8_ID=0
@@ -116,7 +116,7 @@ MECH_8_THEME=1
 MECH_8_STATUS=1
 MECH_8_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_8_TYPE=1
-MECH_8_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_8_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_8_SELLING_PRICE=5000
 
 MECH_9_ID=0
@@ -129,5 +129,5 @@ MECH_9_THEME=1
 MECH_9_STATUS=1
 MECH_9_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_9_TYPE=1
-MECH_9_COMPATIBLE_ENVIRONMENTS=Array[0,1,2]
+MECH_9_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_9_SELLING_PRICE=5000
