--- a/data/data_missions.cfg
+++ b/data/data_missions.cfg
@@ -7,6 +7,7 @@ MISSION_0_NAME="MISSION-000"
 MISSION_0_FLAVOR="Help Jack find Jill"
 MISSION_0_FLAVOR_ICON=0
 MISSION_0_ONE_OVER_ODDS_OF_SUCCESS=1
+MISSION_0_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_0_ENVIRONMENT=0
 MISSION_0_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_0_LOCATION_ID=1
@@ -31,6 +32,7 @@ MISSION_1_NAME="MISSION-001"
 MISSION_1_FLAVOR="Destroy two targets at location."
 MISSION_1_FLAVOR_ICON=1
 MISSION_1_ONE_OVER_ODDS_OF_SUCCESS=1
+MISSION_1_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_1_ENVIRONMENT=1
 MISSION_1_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_1_LOCATION_ID=2
@@ -51,6 +53,7 @@ MISSION_2_NAME="MISSION-002"
 MISSION_2_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_2_FLAVOR_ICON=2
 MISSION_2_ONE_OVER_ODDS_OF_SUCCESS=5
+MISSION_2_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_2_ENVIRONMENT=2
 MISSION_2_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_2_LOCATION_ID=2
@@ -71,6 +74,7 @@ MISSION_3_NAME="MISSION-003"
 MISSION_3_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_3_FLAVOR_ICON=2
 MISSION_3_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_3_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_3_ENVIRONMENT=3
 MISSION_3_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_3_LOCATION_ID=3
@@ -91,6 +95,7 @@ MISSION_4_NAME="MISSION-004"
 MISSION_4_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_4_FLAVOR_ICON=0
 MISSION_4_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_4_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_4_ENVIRONMENT=3
 MISSION_4_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_4_LOCATION_ID=4
@@ -113,6 +118,7 @@ MISSION_5_NAME="MISSION-005"
 MISSION_5_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_5_FLAVOR_ICON=0
 MISSION_5_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_5_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_5_ENVIRONMENT=3
 MISSION_5_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_5_LOCATION_ID=4
@@ -133,6 +139,7 @@ MISSION_6_NAME="MISSION-007"
 MISSION_6_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_6_FLAVOR_ICON=0
 MISSION_6_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_6_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_6_ENVIRONMENT=3
 MISSION_6_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_6_LOCATION_ID=4
@@ -153,6 +160,7 @@ MISSION_7_NAME="MISSION-007"
 MISSION_7_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_7_FLAVOR_ICON=0
 MISSION_7_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_7_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_7_ENVIRONMENT=3
 MISSION_7_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_7_LOCATION_ID=4
@@ -173,6 +181,7 @@ MISSION_8_NAME="MISSION-008"
 MISSION_8_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_8_FLAVOR_ICON=0
 MISSION_8_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_8_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_8_ENVIRONMENT=3
 MISSION_8_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_8_LOCATION_ID=4
@@ -193,6 +202,7 @@ MISSION_9_NAME="MISSION-009"
 MISSION_9_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_9_FLAVOR_ICON=0
 MISSION_9_ONE_OVER_ODDS_OF_SUCCESS=6
+MISSION_9_ONE_OVER_ODDS_OF_RETURNING=1
 MISSION_9_ENVIRONMENT=3
 MISSION_9_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_9_LOCATION_ID=4
