--- a/data/data_mechs.cfg
+++ b/data/data_mechs.cfg
@@ -1,9 +1,10 @@
 [DEFAULT]
 
+VERSION=1.0
 NUMBER_OF_MECHS=10
 
 MECH_0_ID=0
-MECH_0_NAME="OCELOT"
+MECH_0_NAME="BLUE OCELOT"
 MECH_0_COST=10000
 MECH_0_BASE_HEALTH=4
 MECH_0_CURRENT_HEALTH=4
@@ -15,8 +16,8 @@ MECH_0_TYPE=1
 MECH_0_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_0_SELLING_PRICE=5000
 
-MECH_1_ID=0
-MECH_1_NAME="OCELOT"
+MECH_1_ID=1
+MECH_1_NAME="RED OCELOT"
 MECH_1_COST=10000
 MECH_1_BASE_HEALTH=4
 MECH_1_CURRENT_HEALTH=4
@@ -28,8 +29,8 @@ MECH_1_TYPE=1
 MECH_1_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_1_SELLING_PRICE=5000
 
-MECH_2_ID=0
-MECH_2_NAME="OCELOT"
+MECH_2_ID=2
+MECH_2_NAME="TEST OCELOT"
 MECH_2_COST=10000
 MECH_2_BASE_HEALTH=4
 MECH_2_CURRENT_HEALTH=4
@@ -41,8 +42,8 @@ MECH_2_TYPE=1
 MECH_2_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_2_SELLING_PRICE=5000
 
-MECH_3_ID=0
-MECH_3_NAME="OCELOT"
+MECH_3_ID=3
+MECH_3_NAME="MOSQUITO"
 MECH_3_COST=10000
 MECH_3_BASE_HEALTH=4
 MECH_3_CURRENT_HEALTH=4
@@ -54,7 +55,7 @@ MECH_3_TYPE=1
 MECH_3_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_3_SELLING_PRICE=5000
 
-MECH_4_ID=0
+MECH_4_ID=4
 MECH_4_NAME="OCELOT"
 MECH_4_COST=10000
 MECH_4_BASE_HEALTH=4
@@ -67,7 +68,7 @@ MECH_4_TYPE=1
 MECH_4_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_4_SELLING_PRICE=5000
 
-MECH_5_ID=0
+MECH_5_ID=5
 MECH_5_NAME="OCELOT"
 MECH_5_COST=10000
 MECH_5_BASE_HEALTH=4
@@ -80,7 +81,7 @@ MECH_5_TYPE=1
 MECH_5_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_5_SELLING_PRICE=5000
 
-MECH_6_ID=0
+MECH_6_ID=6
 MECH_6_NAME="OCELOT"
 MECH_6_COST=10000
 MECH_6_BASE_HEALTH=4
@@ -93,7 +94,7 @@ MECH_6_TYPE=1
 MECH_6_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_6_SELLING_PRICE=5000
 
-MECH_7_ID=0
+MECH_7_ID=7
 MECH_7_NAME="OCELOT"
 MECH_7_COST=10000
 MECH_7_BASE_HEALTH=4
@@ -106,7 +107,7 @@ MECH_7_TYPE=1
 MECH_7_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_7_SELLING_PRICE=5000
 
-MECH_8_ID=0
+MECH_8_ID=8
 MECH_8_NAME="OCELOT"
 MECH_8_COST=10000
 MECH_8_BASE_HEALTH=4
@@ -119,7 +120,7 @@ MECH_8_TYPE=1
 MECH_8_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_8_SELLING_PRICE=5000
 
-MECH_9_ID=0
+MECH_9_ID=9
 MECH_9_NAME="OCELOT"
 MECH_9_COST=10000
 MECH_9_BASE_HEALTH=4
