--- a/data/data_pilots.cfg
+++ b/data/data_pilots.cfg
@@ -10,10 +10,10 @@ PILOT_0_MISSION_ID=1
 PILOT_0_THEME=1
 PILOT_0_STATUS=1
 PILOT_0_FLAVOR="Loves Jill and exploring space. Is afraid of deep water."
-PILOT_0_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_0_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_0_BETTER_ODDS=1
-PILOT_0_WORSE_ODDS=1
+PILOT_0_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_0_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_0_MISSION_ODDS=1
+PILOT_0_RETURNING_ODDS=1
 
 PILOT_1_ID=1
 PILOT_1_NAME="Jill"
@@ -22,10 +22,10 @@ PILOT_1_MISSION_ID=0
 PILOT_1_THEME=1
 PILOT_1_STATUS=0
 PILOT_1_FLAVOR="Loves Jack and getting lost."
-PILOT_1_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_1_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_1_BETTER_ODDS=1
-PILOT_1_WORSE_ODDS=1
+PILOT_1_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_1_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_1_MISSION_ODDS=1
+PILOT_1_RETURNING_ODDS=1
 
 PILOT_2_ID=2
 PILOT_2_NAME="Jan"
@@ -34,10 +34,10 @@ PILOT_2_MISSION_ID=0
 PILOT_2_THEME=1
 PILOT_2_STATUS=0
 PILOT_2_FLAVOR="FLAVOR TEXT =D."
-PILOT_2_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_2_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_2_BETTER_ODDS=1
-PILOT_2_WORSE_ODDS=1
+PILOT_2_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_2_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_2_MISSION_ODDS=1
+PILOT_2_RETURNING_ODDS=1
 
 PILOT_3_ID=3
 PILOT_3_NAME="Jason"
@@ -46,10 +46,10 @@ PILOT_3_MISSION_ID=0
 PILOT_3_THEME=1
 PILOT_3_STATUS=0
 PILOT_3_FLAVOR="FLAVOR TEXT =D."
-PILOT_3_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_3_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_3_BETTER_ODDS=1
-PILOT_3_WORSE_ODDS=1
+PILOT_3_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_3_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_3_MISSION_ODDS=1
+PILOT_3_RETURNING_ODDS=1
 
 PILOT_4_ID=4
 PILOT_4_NAME="Jacob"
@@ -58,10 +58,10 @@ PILOT_4_MISSION_ID=0
 PILOT_4_THEME=1
 PILOT_4_STATUS=0
 PILOT_4_FLAVOR="FLAVOR TEXT =D."
-PILOT_4_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_4_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_4_BETTER_ODDS=1
-PILOT_4_WORSE_ODDS=1
+PILOT_4_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_4_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_4_MISSION_ODDS=1
+PILOT_4_RETURNING_ODDS=1
 
 PILOT_5_ID=5
 PILOT_5_NAME="Jason"
@@ -70,10 +70,10 @@ PILOT_5_MISSION_ID=0
 PILOT_5_THEME=1
 PILOT_5_STATUS=0
 PILOT_5_FLAVOR="FLAVOR TEXT =D."
-PILOT_5_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_5_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_5_BETTER_ODDS=1
-PILOT_5_WORSE_ODDS=1
+PILOT_5_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_5_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_5_MISSION_ODDS=1
+PILOT_5_RETURNING_ODDS=1
 
 PILOT_6_ID=6
 PILOT_6_NAME="Jason"
@@ -82,10 +82,10 @@ PILOT_6_MISSION_ID=0
 PILOT_6_THEME=1
 PILOT_6_STATUS=0
 PILOT_6_FLAVOR="FLAVOR TEXT =D."
-PILOT_6_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_6_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_6_BETTER_ODDS=1
-PILOT_6_WORSE_ODDS=1
+PILOT_6_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_6_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_6_MISSION_ODDS=1
+PILOT_6_RETURNING_ODDS=1
 
 PILOT_7_ID=7
 PILOT_7_NAME="Jason"
@@ -94,10 +94,10 @@ PILOT_7_MISSION_ID=0
 PILOT_7_THEME=1
 PILOT_7_STATUS=0
 PILOT_7_FLAVOR="FLAVOR TEXT =D."
-PILOT_7_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_7_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_7_BETTER_ODDS=1
-PILOT_7_WORSE_ODDS=1
+PILOT_7_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_7_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_7_MISSION_ODDS=1
+PILOT_7_RETURNING_ODDS=1
 
 PILOT_8_ID=8
 PILOT_8_NAME="Jason"
@@ -106,10 +106,10 @@ PILOT_8_MISSION_ID=0
 PILOT_8_THEME=1
 PILOT_8_STATUS=0
 PILOT_8_FLAVOR="FLAVOR TEXT =D."
-PILOT_8_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_8_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_8_BETTER_ODDS=1
-PILOT_8_WORSE_ODDS=1
+PILOT_8_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_8_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_8_MISSION_ODDS=1
+PILOT_8_RETURNING_ODDS=1
 
 PILOT_9_ID=9
 PILOT_9_NAME="Jason"
@@ -118,7 +118,7 @@ PILOT_9_MISSION_ID=0
 PILOT_9_THEME=1
 PILOT_9_STATUS=0
 PILOT_9_FLAVOR="FLAVOR TEXT =D."
-PILOT_9_CRITERIA_FOR_BETTER_ODDS=1
-PILOT_9_CRITERIA_FOR_WORSE_ODDS=2
-PILOT_9_BETTER_ODDS=1
-PILOT_9_WORSE_ODDS=1
+PILOT_9_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_9_CRITERIA_FOR_RETURNING_ODDS=2
+PILOT_9_MISSION_ODDS=1
+PILOT_9_RETURNING_ODDS=1
