--- a/data/data_locations.cfg
+++ b/data/data_locations.cfg
@@ -6,49 +6,49 @@ NUMBER_OF_LOCATIONS=10
 LOCATION_0_ID=0
 LOCATION_0_ENVIRONMENT=1
 LOCATION_0_FLAVOR="A lush forest."
-LOCATION_0_POSITION=Vector3(0,0,0)
+LOCATION_0_POSITION=Vector3(29,25,-18)
 
-LOCATION_1_ID=0
+LOCATION_1_ID=1
 LOCATION_1_ENVIRONMENT=1
 LOCATION_1_FLAVOR="A lush forest."
-LOCATION_1_POSITION=Vector3(0,0,0)
+LOCATION_1_POSITION=Vector3(29,25,7)
 
-LOCATION_2_ID=0
+LOCATION_2_ID=2
 LOCATION_2_ENVIRONMENT=1
 LOCATION_2_FLAVOR="A lush forest."
-LOCATION_2_POSITION=Vector3(0,0,0)
+LOCATION_2_POSITION=Vector3(29,25,31)
 
-LOCATION_3_ID=0
+LOCATION_3_ID=3
 LOCATION_3_ENVIRONMENT=1
 LOCATION_3_FLAVOR="A lush forest."
-LOCATION_3_POSITION=Vector3(0,0,0)
+LOCATION_3_POSITION=Vector3(-10,25,48)
 
-LOCATION_4_ID=0
+LOCATION_4_ID=4
 LOCATION_4_ENVIRONMENT=1
 LOCATION_4_FLAVOR="A lush forest."
-LOCATION_4_POSITION=Vector3(0,0,0)
+LOCATION_4_POSITION=Vector3(-20,25,1)
 
-LOCATION_5_ID=0
+LOCATION_5_ID=5
 LOCATION_5_ENVIRONMENT=1
 LOCATION_5_FLAVOR="A lush forest."
-LOCATION_5_POSITION=Vector3(0,0,0)
+LOCATION_5_POSITION=Vector3(-3,25,-37)
 
-LOCATION_6_ID=0
+LOCATION_6_ID=6
 LOCATION_6_ENVIRONMENT=1
 LOCATION_6_FLAVOR="A lush forest."
-LOCATION_6_POSITION=Vector3(0,0,0)
+LOCATION_6_POSITION=Vector3(-42,25,-37)
 
-LOCATION_7_ID=0
+LOCATION_7_ID=7
 LOCATION_7_ENVIRONMENT=1
 LOCATION_7_FLAVOR="A lush forest."
-LOCATION_7_POSITION=Vector3(0,0,0)
+LOCATION_7_POSITION=Vector3(-58,25,50)
 
-LOCATION_8_ID=0
+LOCATION_8_ID=8
 LOCATION_8_ENVIRONMENT=1
 LOCATION_8_FLAVOR="A lush forest."
-LOCATION_8_POSITION=Vector3(0,0,0)
+LOCATION_8_POSITION=Vector3(-49,25,36)
 
-LOCATION_9_ID=0
+LOCATION_9_ID=9
 LOCATION_9_ENVIRONMENT=1
 LOCATION_9_FLAVOR="A lush forest."
-LOCATION_9_POSITION=Vector3(0,0,0)
+LOCATION_9_POSITION=Vector3(-30,25,68)
