--- a/data/data_missions.cfg
+++ b/data/data_missions.cfg
@@ -9,24 +9,34 @@ MISSION_0_FLAVOR="Help Jack find Jill"
 MISSION_0_FLAVOR_ICON=0
 MISSION_0_ONE_OVER_ODDS_FOR_MISSION=1
 MISSION_0_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_0_ENVIRONMENT=0
 MISSION_0_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_0_LOCATION_ID=0
-MISSION_0_MECH_ID=0
-MISSION_0_PILOT_ID=0
-MISSION_0_STATUS=0
-MISSION_0_TIME_STARTED=""
+MISSION_0_STATUS=1
+MISSION_0_TIME_STARTED=0
 MISSION_0_REWARD_TYPE_1=0
 MISSION_0_REWARD_TYPE_2=0
 MISSION_0_REWARD_VALUE_1=1
 MISSION_0_REWARD_VALUE_2=1
-MISSION_0_START_SCRIPT="SAY[Help me find Jill!]Jack"
-MISSION_0_SUCCESS_SCRIPT="
-SAY[Thanks!]Jack
-SAY[Yeah, thanks!]Jill
-DO[FINISHED_MISSION_0]"
-MISSION_0_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
+MISSION_0_START_SCRIPT="
+SAY[Help me find Jill!]Jack
+CHOICE[OK,NO]
+[OK]
+say[Thanks! Let's go!]Jack
+go[end]
+[NO]
+say[Your benefactor will hear about this.]
+say[MISSION FAILED!]
+do[fail mission(0)]
+go[end]
+[end]"
+
+MISSION_0_SUCCESS_SCRIPT="
+SAY[Good work. I have another job for you]Benefactor
+do[complete mission(0)]
+do[unlock mission(1)]"
+
+MISSION_0_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_1_ID=1
 MISSION_1_NAME="MISSION-001"
@@ -34,13 +44,10 @@ MISSION_1_FLAVOR="Destroy two targets at location."
 MISSION_1_FLAVOR_ICON=1
 MISSION_1_ONE_OVER_ODDS_FOR_MISSION=1
 MISSION_1_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_1_ENVIRONMENT=1
 MISSION_1_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_1_LOCATION_ID=1
-MISSION_1_MECH_ID=0
-MISSION_1_PILOT_ID=0
 MISSION_1_STATUS=0
-MISSION_1_TIME_STARTED=""
+MISSION_1_TIME_STARTED=0
 MISSION_1_REWARD_TYPE_1=0
 MISSION_1_REWARD_TYPE_2=0
 MISSION_1_REWARD_VALUE_1=1
@@ -55,13 +62,10 @@ MISSION_2_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_2_FLAVOR_ICON=2
 MISSION_2_ONE_OVER_ODDS_FOR_MISSION=5
 MISSION_2_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_2_ENVIRONMENT=2
 MISSION_2_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_2_LOCATION_ID=2
-MISSION_2_MECH_ID=0
-MISSION_2_PILOT_ID=0
 MISSION_2_STATUS=0
-MISSION_2_TIME_STARTED=""
+MISSION_2_TIME_STARTED=0
 MISSION_2_REWARD_TYPE_1=0
 MISSION_2_REWARD_TYPE_2=0
 MISSION_2_REWARD_VALUE_1=1
@@ -76,13 +80,10 @@ MISSION_3_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_3_FLAVOR_ICON=2
 MISSION_3_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_3_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_3_ENVIRONMENT=3
 MISSION_3_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_3_LOCATION_ID=3
-MISSION_3_MECH_ID=0
-MISSION_3_PILOT_ID=0
 MISSION_3_STATUS=0
-MISSION_3_TIME_STARTED=""
+MISSION_3_TIME_STARTED=0
 MISSION_3_REWARD_TYPE_1=0
 MISSION_3_REWARD_TYPE_2=0
 MISSION_3_REWARD_VALUE_1=1
@@ -97,15 +98,12 @@ MISSION_4_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_4_FLAVOR_ICON=0
 MISSION_4_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_4_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_4_ENVIRONMENT=3
 MISSION_4_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_4_LOCATION_ID=4
-MISSION_4_MECH_ID=0
-MISSION_4_PILOT_ID=0
 MISSION_4_STATUS=0
 MISSION_4_PILOT_ID=0
 MISSION_4_STATUS=0
-MISSION_4_TIME_STARTED=""
+MISSION_4_TIME_STARTED=0
 MISSION_4_REWARD_TYPE_1=0
 MISSION_4_REWARD_TYPE_2=0
 MISSION_4_REWARD_VALUE_1=1
@@ -120,13 +118,10 @@ MISSION_5_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_5_FLAVOR_ICON=0
 MISSION_5_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_5_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_5_ENVIRONMENT=3
 MISSION_5_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_5_LOCATION_ID=5
-MISSION_5_MECH_ID=0
-MISSION_5_PILOT_ID=0
 MISSION_5_STATUS=0
-MISSION_5_TIME_STARTED=""
+MISSION_5_TIME_STARTED=0
 MISSION_5_REWARD_TYPE_1=0
 MISSION_5_REWARD_TYPE_2=0
 MISSION_5_REWARD_VALUE_1=1
@@ -135,19 +130,16 @@ MISSION_5_START_SCRIPT=""
 MISSION_5_SUCCESS_SCRIPT=""
 MISSION_5_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
-MISSION_6_ID=7
-MISSION_6_NAME="MISSION-007"
+MISSION_6_ID=6
+MISSION_6_NAME="MISSION-006"
 MISSION_6_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_6_FLAVOR_ICON=0
 MISSION_6_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_6_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_6_ENVIRONMENT=3
 MISSION_6_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_6_LOCATION_ID=6
-MISSION_6_MECH_ID=0
-MISSION_6_PILOT_ID=0
 MISSION_6_STATUS=0
-MISSION_6_TIME_STARTED=""
+MISSION_6_TIME_STARTED=0
 MISSION_6_REWARD_TYPE_1=0
 MISSION_6_REWARD_TYPE_2=0
 MISSION_6_REWARD_VALUE_1=1
@@ -162,13 +154,10 @@ MISSION_7_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_7_FLAVOR_ICON=0
 MISSION_7_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_7_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_7_ENVIRONMENT=3
 MISSION_7_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_7_LOCATION_ID=7
-MISSION_7_MECH_ID=0
-MISSION_7_PILOT_ID=0
 MISSION_7_STATUS=0
-MISSION_7_TIME_STARTED=""
+MISSION_7_TIME_STARTED=0
 MISSION_7_REWARD_TYPE_1=0
 MISSION_7_REWARD_TYPE_2=0
 MISSION_7_REWARD_VALUE_1=1
@@ -183,13 +172,10 @@ MISSION_8_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_8_FLAVOR_ICON=0
 MISSION_8_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_8_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_8_ENVIRONMENT=3
 MISSION_8_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_8_LOCATION_ID=8
-MISSION_8_MECH_ID=0
-MISSION_8_PILOT_ID=0
 MISSION_8_STATUS=0
-MISSION_8_TIME_STARTED=""
+MISSION_8_TIME_STARTED=0
 MISSION_8_REWARD_TYPE_1=0
 MISSION_8_REWARD_TYPE_2=0
 MISSION_8_REWARD_VALUE_1=1
@@ -204,14 +190,10 @@ MISSION_9_FLAVOR="MISSION FLAVOR TEXT"
 MISSION_9_FLAVOR_ICON=0
 MISSION_9_ONE_OVER_ODDS_FOR_MISSION=6
 MISSION_9_ONE_OVER_ODDS_FOR_RETURNING=1
-MISSION_9_ENVIRONMENT=3
 MISSION_9_ALLOWED_MECH_TYPES=Array[int]([0, 1, 2])
 MISSION_9_LOCATION_ID=9
-MISSION_9_MECH_ID=0
-MISSION_9_PILOT_ID=0
 MISSION_9_STATUS=0
-
-MISSION_9_TIME_STARTED=""
+MISSION_9_TIME_STARTED=0
 MISSION_9_REWARD_TYPE_1=0
 MISSION_9_REWARD_TYPE_2=0
 MISSION_9_REWARD_VALUE_1=1
