--- a/data/data_pilots.cfg
+++ b/data/data_pilots.cfg
@@ -4,121 +4,121 @@ VERSION=1.0
 NUMBER_OF_PILOTS=10
 
 PILOT_0_ID=0
+PILOT_0_MECH_ID=0
 PILOT_0_NAME="Jack"
 PILOT_0_COST=1000
-PILOT_0_MISSION_ID=1
 PILOT_0_THEME=1
 PILOT_0_STATUS=1
 PILOT_0_FLAVOR="Loves Jill and exploring space. Is afraid of deep water."
-PILOT_0_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_0_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_0_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_0_MISSION_ODDS=1
-PILOT_0_RETURNING_ODDS=1
+PILOT_0_MISSION_ODDS=3
+PILOT_0_RETURNING_ODDS=4
 
 PILOT_1_ID=1
+PILOT_1_MECH_ID=1
 PILOT_1_NAME="Jill"
 PILOT_1_COST=1000
-PILOT_1_MISSION_ID=0
 PILOT_1_THEME=1
 PILOT_1_STATUS=0
 PILOT_1_FLAVOR="Loves Jack and getting lost."
-PILOT_1_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_1_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_1_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_1_MISSION_ODDS=1
-PILOT_1_RETURNING_ODDS=1
+PILOT_1_MISSION_ODDS=3
+PILOT_1_RETURNING_ODDS=4
 
 PILOT_2_ID=2
+PILOT_2_MECH_ID=2
 PILOT_2_NAME="Jan"
 PILOT_2_COST=1000
-PILOT_2_MISSION_ID=0
 PILOT_2_THEME=1
 PILOT_2_STATUS=0
 PILOT_2_FLAVOR="FLAVOR TEXT =D."
-PILOT_2_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_2_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_2_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_2_MISSION_ODDS=1
-PILOT_2_RETURNING_ODDS=1
+PILOT_2_MISSION_ODDS=3
+PILOT_2_RETURNING_ODDS=4
 
 PILOT_3_ID=3
+PILOT_3_MECH_ID=3
 PILOT_3_NAME="Jason"
 PILOT_3_COST=1000
-PILOT_3_MISSION_ID=0
 PILOT_3_THEME=1
 PILOT_3_STATUS=0
 PILOT_3_FLAVOR="FLAVOR TEXT =D."
-PILOT_3_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_3_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_3_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_3_MISSION_ODDS=1
-PILOT_3_RETURNING_ODDS=1
+PILOT_3_MISSION_ODDS=3
+PILOT_3_RETURNING_ODDS=4
 
 PILOT_4_ID=4
+PILOT_4_MECH_ID=4
 PILOT_4_NAME="Jacob"
 PILOT_4_COST=1000
-PILOT_4_MISSION_ID=0
 PILOT_4_THEME=1
 PILOT_4_STATUS=0
 PILOT_4_FLAVOR="FLAVOR TEXT =D."
-PILOT_4_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_4_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_4_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_4_MISSION_ODDS=1
-PILOT_4_RETURNING_ODDS=1
+PILOT_4_MISSION_ODDS=3
+PILOT_4_RETURNING_ODDS=4
 
 PILOT_5_ID=5
+PILOT_5_MECH_ID=5
 PILOT_5_NAME="Jason"
 PILOT_5_COST=1000
-PILOT_5_MISSION_ID=0
 PILOT_5_THEME=1
 PILOT_5_STATUS=0
 PILOT_5_FLAVOR="FLAVOR TEXT =D."
-PILOT_5_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_5_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_5_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_5_MISSION_ODDS=1
-PILOT_5_RETURNING_ODDS=1
+PILOT_5_MISSION_ODDS=3
+PILOT_5_RETURNING_ODDS=4
 
 PILOT_6_ID=6
+PILOT_6_MECH_ID=6
 PILOT_6_NAME="Jason"
 PILOT_6_COST=1000
-PILOT_6_MISSION_ID=0
 PILOT_6_THEME=1
 PILOT_6_STATUS=0
 PILOT_6_FLAVOR="FLAVOR TEXT =D."
-PILOT_6_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_6_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_6_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_6_MISSION_ODDS=1
-PILOT_6_RETURNING_ODDS=1
+PILOT_6_MISSION_ODDS=3
+PILOT_6_RETURNING_ODDS=4
 
 PILOT_7_ID=7
+PILOT_7_MECH_ID=7
 PILOT_7_NAME="Jason"
 PILOT_7_COST=1000
-PILOT_7_MISSION_ID=0
 PILOT_7_THEME=1
 PILOT_7_STATUS=0
 PILOT_7_FLAVOR="FLAVOR TEXT =D."
-PILOT_7_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_7_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_7_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_7_MISSION_ODDS=1
-PILOT_7_RETURNING_ODDS=1
+PILOT_7_MISSION_ODDS=3
+PILOT_7_RETURNING_ODDS=4
 
 PILOT_8_ID=8
+PILOT_8_MECH_ID=8
 PILOT_8_NAME="Jason"
 PILOT_8_COST=1000
-PILOT_8_MISSION_ID=0
 PILOT_8_THEME=1
 PILOT_8_STATUS=0
 PILOT_8_FLAVOR="FLAVOR TEXT =D."
-PILOT_8_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_8_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_8_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_8_MISSION_ODDS=1
-PILOT_8_RETURNING_ODDS=1
+PILOT_8_MISSION_ODDS=3
+PILOT_8_RETURNING_ODDS=4
 
 PILOT_9_ID=9
+PILOT_9_MECH_ID=9
 PILOT_9_NAME="Jason"
 PILOT_9_COST=1000
-PILOT_9_MISSION_ID=0
 PILOT_9_THEME=1
 PILOT_9_STATUS=0
 PILOT_9_FLAVOR="FLAVOR TEXT =D."
-PILOT_9_CRITERIA_FOR_MISSION_ODDS=1
+PILOT_9_CRITERIA_FOR_MISSION_ODDS=3
 PILOT_9_CRITERIA_FOR_RETURNING_ODDS=2
-PILOT_9_MISSION_ODDS=1
-PILOT_9_RETURNING_ODDS=1
+PILOT_9_MISSION_ODDS=3
+PILOT_9_RETURNING_ODDS=4
