--- a/data/data_mechs.cfg
+++ b/data/data_mechs.cfg
@@ -5,13 +5,13 @@ NUMBER_OF_MECHS=10
 
 MECH_0_ID=0
 MECH_0_NAME="BLUE OCELOT"
-MECH_0_COST=10000
+MECH_0_COST=5000
 MECH_0_BASE_HEALTH=4
 MECH_0_CURRENT_HEALTH=4
-MECH_0_MISSION_ID=0
+MECH_0_MISSION_ID=-1
 MECH_0_THEME=1
-MECH_0_STATUS=1
-MECH_0_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
+MECH_0_STATUS=0
+MECH_0_FLAVOR="Great for special ops. Has amazing resale value. "
 MECH_0_TYPE=1
 MECH_0_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
 MECH_0_SELLING_PRICE=5000
@@ -21,9 +21,9 @@ MECH_1_NAME="RED OCELOT"
 MECH_1_COST=10000
 MECH_1_BASE_HEALTH=4
 MECH_1_CURRENT_HEALTH=4
-MECH_1_MISSION_ID=1
+MECH_1_MISSION_ID=-1
 MECH_1_THEME=1
-MECH_1_STATUS=1
+MECH_1_STATUS=0
 MECH_1_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_1_TYPE=1
 MECH_1_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -34,9 +34,9 @@ MECH_2_NAME="TEST OCELOT"
 MECH_2_COST=10000
 MECH_2_BASE_HEALTH=4
 MECH_2_CURRENT_HEALTH=4
-MECH_2_MISSION_ID=2
+MECH_2_MISSION_ID=-1
 MECH_2_THEME=1
-MECH_2_STATUS=1
+MECH_2_STATUS=0
 MECH_2_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_2_TYPE=1
 MECH_2_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -47,9 +47,9 @@ MECH_3_NAME="MOSQUITO"
 MECH_3_COST=10000
 MECH_3_BASE_HEALTH=4
 MECH_3_CURRENT_HEALTH=4
-MECH_3_MISSION_ID=3
+MECH_3_MISSION_ID=-1
 MECH_3_THEME=1
-MECH_3_STATUS=1
+MECH_3_STATUS=0
 MECH_3_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_3_TYPE=1
 MECH_3_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -60,9 +60,9 @@ MECH_4_NAME="OCELOT"
 MECH_4_COST=10000
 MECH_4_BASE_HEALTH=4
 MECH_4_CURRENT_HEALTH=4
-MECH_4_MISSION_ID=4
+MECH_4_MISSION_ID=-1
 MECH_4_THEME=1
-MECH_4_STATUS=1
+MECH_4_STATUS=0
 MECH_4_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_4_TYPE=1
 MECH_4_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -73,9 +73,9 @@ MECH_5_NAME="OCELOT"
 MECH_5_COST=10000
 MECH_5_BASE_HEALTH=4
 MECH_5_CURRENT_HEALTH=4
-MECH_5_MISSION_ID=5
+MECH_5_MISSION_ID=-1
 MECH_5_THEME=1
-MECH_5_STATUS=1
+MECH_5_STATUS=0
 MECH_5_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_5_TYPE=1
 MECH_5_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -86,9 +86,9 @@ MECH_6_NAME="OCELOT"
 MECH_6_COST=10000
 MECH_6_BASE_HEALTH=4
 MECH_6_CURRENT_HEALTH=4
-MECH_6_MISSION_ID=6
+MECH_6_MISSION_ID=-1
 MECH_6_THEME=1
-MECH_6_STATUS=1
+MECH_6_STATUS=0
 MECH_6_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_6_TYPE=1
 MECH_6_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -99,9 +99,9 @@ MECH_7_NAME="OCELOT"
 MECH_7_COST=10000
 MECH_7_BASE_HEALTH=4
 MECH_7_CURRENT_HEALTH=4
-MECH_7_MISSION_ID=7
+MECH_7_MISSION_ID=-1
 MECH_7_THEME=1
-MECH_7_STATUS=1
+MECH_7_STATUS=0
 MECH_7_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_7_TYPE=1
 MECH_7_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -112,9 +112,9 @@ MECH_8_NAME="OCELOT"
 MECH_8_COST=10000
 MECH_8_BASE_HEALTH=4
 MECH_8_CURRENT_HEALTH=4
-MECH_8_MISSION_ID=8
+MECH_8_MISSION_ID=-1
 MECH_8_THEME=1
-MECH_8_STATUS=1
+MECH_8_STATUS=0
 MECH_8_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_8_TYPE=1
 MECH_8_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
@@ -125,9 +125,9 @@ MECH_9_NAME="OCELOT"
 MECH_9_COST=10000
 MECH_9_BASE_HEALTH=4
 MECH_9_CURRENT_HEALTH=4
-MECH_9_MISSION_ID=9
+MECH_9_MISSION_ID=-1
 MECH_9_THEME=1
-MECH_9_STATUS=1
+MECH_9_STATUS=0
 MECH_9_FLAVOR="Great for special ops. Waterproof, but has trouble underwater. "
 MECH_9_TYPE=1
 MECH_9_COMPATIBLE_ENVIRONMENTS=Array[int]([0,1,2])
