--- a/data/data_missions.cfg
+++ b/data/data_missions.cfg
@@ -23,16 +23,19 @@ go[end]
 [NO]
 say[Your benefactor will hear about this.]
 say[MISSION FAILED!]
-do[fail mission(0)]
 go[end]
 [end]"
 
 MISSION_0_SUCCESS_SCRIPT="
+say[MISSION SUCCESS!]
 SAY[Good work. I have another job for you]Benefactor
+say[do you like me]
 do[complete mission(0)]
 do[unlock mission(1)]"
 
-MISSION_0_FAIL_SCRIPT="SAY[What a disaster!]Jack"
+MISSION_0_FAIL_SCRIPT="
+say[MISSION FAIELD!]
+SAY[What a disaster!]Jack"
 
 MISSION_1_ID=1
 MISSION_1_NAME="MISSION-001"
