--- a/data/data_missions.cfg
+++ b/data/data_missions.cfg
@@ -14,8 +14,7 @@ MISSION_0_LOCATION_ID=0
 MISSION_0_STATUS=1
 MISSION_0_TIME_STARTED=0
 
-MISSION_0_START_SCRIPT="
-SAY[Help me find Jill!]Jack
+MISSION_0_START_SCRIPT="SAY[Help me find Jill!]Jack
 CHOICE[OK,NO]
 [OK]
 say[Thanks! Let's go!]Jack
@@ -26,8 +25,7 @@ say[MISSION FAILED!]
 go[end]
 [end]"
 
-MISSION_0_SUCCESS_SCRIPT="
-say[MISSION SUCCESS!]
+MISSION_0_SUCCESS_SCRIPT="say[MISSION SUCCESS!]
 SAY[Good work. I have another job for you]Benefactor
 say[do you like me]
 do[complete mission(0)]
@@ -48,8 +46,10 @@ MISSION_1_LOCATION_ID=1
 MISSION_1_STATUS=0
 MISSION_1_TIME_STARTED=0
 
-MISSION_1_START_SCRIPT=""
-MISSION_1_SUCCESS_SCRIPT=""
+MISSION_1_START_SCRIPT="say[START!]"
+
+MISSION_1_SUCCESS_SCRIPT="do[complete mission(1)]
+do[unlock mission(2)]"
 MISSION_1_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_2_ID=2
@@ -63,8 +63,10 @@ MISSION_2_LOCATION_ID=2
 MISSION_2_STATUS=0
 MISSION_2_TIME_STARTED=0
 
-MISSION_2_START_SCRIPT=""
-MISSION_2_SUCCESS_SCRIPT=""
+MISSION_2_START_SCRIPT="say[START!]"
+
+MISSION_2_SUCCESS_SCRIPT="do[complete mission(2)]
+do[unlock mission(3)]"
 MISSION_2_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_3_ID=3
@@ -78,8 +80,9 @@ MISSION_3_LOCATION_ID=3
 MISSION_3_STATUS=0
 MISSION_3_TIME_STARTED=0
 
-MISSION_3_START_SCRIPT=""
-MISSION_3_SUCCESS_SCRIPT=""
+MISSION_3_START_SCRIPT="say[START!]"
+MISSION_3_SUCCESS_SCRIPT="do[complete mission(3)]
+do[unlock mission(4)]"
 MISSION_3_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_4_ID=4
@@ -95,8 +98,10 @@ MISSION_4_PILOT_ID=0
 MISSION_4_STATUS=0
 MISSION_4_TIME_STARTED=0
 
-MISSION_4_START_SCRIPT=""
-MISSION_4_SUCCESS_SCRIPT=""
+MISSION_4_START_SCRIPT="say[START!]"
+MISSION_4_SUCCESS_SCRIPT="
+do[complete mission(4)]
+do[unlock mission(5)]"
 MISSION_4_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_5_ID=5
@@ -110,8 +115,10 @@ MISSION_5_LOCATION_ID=5
 MISSION_5_STATUS=0
 MISSION_5_TIME_STARTED=0
 
-MISSION_5_START_SCRIPT=""
-MISSION_5_SUCCESS_SCRIPT=""
+MISSION_5_START_SCRIPT="say[START!]"
+MISSION_5_SUCCESS_SCRIPT="
+do[complete mission(4)]
+do[unlock mission(5)]"
 MISSION_5_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_6_ID=6
@@ -125,8 +132,10 @@ MISSION_6_LOCATION_ID=6
 MISSION_6_STATUS=0
 MISSION_6_TIME_STARTED=0
 
-MISSION_6_START_SCRIPT=""
-MISSION_6_SUCCESS_SCRIPT=""
+MISSION_6_START_SCRIPT="say[START!]"
+MISSION_6_SUCCESS_SCRIPT="
+do[complete mission(5)]
+do[unlock mission(6)]"
 MISSION_6_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_7_ID=7
@@ -140,8 +149,10 @@ MISSION_7_LOCATION_ID=7
 MISSION_7_STATUS=0
 MISSION_7_TIME_STARTED=0
 
-MISSION_7_START_SCRIPT=""
-MISSION_7_SUCCESS_SCRIPT=""
+MISSION_7_START_SCRIPT="say[START!]"
+MISSION_7_SUCCESS_SCRIPT="
+do[complete mission(7)]
+do[unlock mission(8)]"
 MISSION_7_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_8_ID=8
@@ -155,8 +166,10 @@ MISSION_8_LOCATION_ID=8
 MISSION_8_STATUS=0
 MISSION_8_TIME_STARTED=0
 
-MISSION_8_START_SCRIPT=""
-MISSION_8_SUCCESS_SCRIPT=""
+MISSION_8_START_SCRIPT="say[START!]"
+MISSION_8_SUCCESS_SCRIPT="
+do[complete mission(8)]
+do[unlock mission(9)]"
 MISSION_8_FAIL_SCRIPT="SAY[What a disaster!]Jack"
 
 MISSION_9_ID=9
@@ -170,6 +183,8 @@ MISSION_9_LOCATION_ID=9
 MISSION_9_STATUS=0
 MISSION_9_TIME_STARTED=0
 
-MISSION_9_START_SCRIPT=""
-MISSION_9_SUCCESS_SCRIPT=""
+MISSION_9_START_SCRIPT="say[START!]"
+MISSION_9_SUCCESS_SCRIPT="
+do[complete mission(9)]
+do[unlock mission(10)]"
 MISSION_9_FAIL_SCRIPT="SAY[What a disaster!]Jack"
