--- a/data/data_missions.cfg
+++ b/data/data_missions.cfg
@@ -33,7 +33,9 @@ do[unlock mission(1)]"
 
 MISSION_0_FAIL_SCRIPT="
 say[MISSION FAIELD!]
-SAY[What a disaster!]Jack"
+SAY[What a disaster!]Jack
+do[fail mission(0)]
+do[unlock mission(1)]"
 
 MISSION_1_ID=1
 MISSION_1_NAME="MISSION-001"
